--- a/pasty_server.conf
+++ b/pasty_server.conf
@@ -3,9 +3,9 @@ pasty:
   url: http://localhost
 
 irc:
-  server: localhost
+  server: irc.ethz.ch
   port: 6667
   username: pastybot
   channels:
-    - '#test'
+    - '#amartakotest'
     - test2
