--- a/pasty_server.conf.EXAMPLE
+++ b/pasty_server.conf.EXAMPLE
@@ -3,9 +3,9 @@ pasty:
   url: http://localhost
 
 irc:
-  server: irc.ethz.ch
+  server: localhost
   port: 6667
   username: pastybot
   channels:
-    - '#amartakotest'
+    - '#test'
     - test2
