config: channel is now a hash

--- a/pasty_server.conf.EXAMPLE
+++ b/pasty_server.conf.EXAMPLE
@@ -8,5 +8,7 @@ irc:
   port: 6667
   username: pastybot
   channels:
-    - '#test'
-    - test2
+    - name: '#test'
+      password: None
+    - name: '#test2'
+      password: None
