Adapted mock config and assert .conf file existence

--- a/tests/mock/pasty_server.conf
+++ b/tests/mock/pasty_server.conf
@@ -5,7 +5,9 @@ pasty:
 irc:
   server: localhost
   port: 6667
+  encryption: None
   username: pastybot
   channels:
-    - '#test'
-    - 'test2'
+    - name: '#test'
+      key: None
+    - name: 'test2'
